Update README with current feature set
Co-authored-by: Claude Sonnet 4.6 <noreply@anthropic.com>